--- a/db/models.yml
+++ b/db/models.yml
@@ -1,35 +1,21 @@
-# Example:
-#
-# Book
-#   title: text
-#   author_id: integer
-#   summary: text
-#   price: integer
-#   hardcover: boolean
-#
-#
-# Indent consistently!  Follow the above syntax exactly.
-#
-#
-#
-# Column choices are: text, integer, boolean, datetime, and float.
-#
-#
-# Default values can be specified like this:
-#
-#    price: integer(0)
-#
-# If not specified, Boolean columns always default to false.
-#
-# You can omit the column type if it's a text column or obviously an integer column:
-#
-# Book
-#   title
-#   author_id
-#   summary
-#   price: integer
-#   hardcover: boolean
-#
-# Complete details are in the README file online.
-#
-# Have fun!
+User
+  name: text
+  email: text
+  password_digest: text
+  pets: text
+  is_host: boolean
+  
+Posting
+  title: text
+  summary: text
+  location: text
+  price: integer
+  photo_url: text
+  host_id: integer
+
+Booking
+  start_date: datetime
+  end_date: datetime
+  user_id: integer
+  host_id: integer
+  posting_id: integer
